# xB77

./: .gitignore  .gitmodules  .stylus-addresses  AGORA_APPLICATION_TEXT.md  BRIEF.W1.md  BRIEF.md  Cargo.toml  Containerfile  Containerfile.solana_slim  Containerfile.sunspot  DEMO-MEGA.md  DEMO.md  HANDOFF-NEXT-SESSION.md  HANDOFF-TOMORROW.md  HANDOFF-TRIDENT.md  HANDOFF.md  MISSION_DELUXE.md  Makefile  Makefile.native  NEXT_STEPS.md  NOTAS_CIERRE_DEMO.md  README-ARC.md  README-SUI.md  README.md  RESEARCH_PLAN.md  ROADMAP.md  SOVEREIGN_VISION.md  Stylus.toml  WEEK_PLAN_S7.md  WEEK_PLAN_S8.md  ZDK_REWIRE.md  agent.toml  branch_noir_demo.md  build.zig  docker-compose.yml  fly.toml  light_basics.txt  light_example.txt  mission.md  package.json  (+7 more)
.tmp_solana_zig/: build_helper.zig
.xb77/: ledger.jsonl
.xb77_client/: state.vault
.xb77_provider/: merchant.json
circuits/agent_badge/verifier_program/: Cargo.toml
circuits/agent_badge/verifier_program/src/: lib.rs  vk.rs
cli/: Cargo.toml  flags.zig  main.zig
cli/commands/: gateway.zig  gateway_anchor.zig  gateway_watch.zig  identity.zig  intent.zig  link.zig  merchant_onchain.zig  network.zig  ops.zig  pulse.zig  services.zig  spawn.zig  zk.zig
cli/src/: main.rs
contracts/: Cargo.toml
contracts/programs/xb77_gateway/: Cargo.toml  README.md
contracts/programs/xb77_gateway/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/programs/xb77_gateway/tests/: gateway.rs  worktree_b.rs
core/: anchor.zig  audit.zig  awp.zig  awpool.zig  bn254.zig  cdp.zig  chain.zig  cmt.zig  compliance.zig  compression.zig  config.zig  constitution.zig  context.zig  core.zig  crypto.zig  engine.zig  evm.zig  http.zig  ipfs.zig  merchant.zig  mesh.zig  parser.zig  pay.zig  portal.zig  poseidon.zig  poseidon_constants.zig  prover.zig  receipt.zig  risk.zig  rlp.zig  solana.zig  store.zig  strategist.zig  swap.zig  tx.zig  types.zig  vault.zig  yellowstone.zig  znode_bridge.zig
demo/: run_1781409072.jsonl  run_1781409113.jsonl  run_1781409170.jsonl  run_latest.jsonl
demo_captures/: 01_sns.json  02_brain_shim.json  03_brain_fallback.json  04_status.json  05_trident_smoke.json  06_gateway_submit.json  07_watch_once.json  08_merchant_register.json  09_zk_run.json  10_mic_drop.json
docs/: DEMO_DELUXE.md  DEMO_FRONTIER.md  MULTICHAIN-DOCS-PLAN.md  README.md  SESSION_BRIEF.md  STATE.md  _config.yml  api-contract-v1.md  architecture.md  brief-phase-3.md  changelog.md  comparison.md  index.html  index.md  manifesto.md  package-lock.json  package.json  roadmap.md  robinhoodchain.md  stylus-arbitrum.md  whitepaper.md  why.md
docs_backup_v0/: DEMO_FRONTIER.md
gateway/: main.zig  worker.js
hub/: README.md  hub.css  hub.ts  index.html  index.ts
idls/: xb77_gateway.json  xb77_receipts.json
infra/: Containerfile.agent  Containerfile.agent.tiny  Containerfile.flyctl  Containerfile.infra  Containerfile.solana_slim  Containerfile.wrangler  Containerfile.zk
mcp/: README.md  package.json  run.sh  server.zig  tsconfig.json
notes/: ARCHITECTURE-PROPOSAL.md  DEBT-V0.16.md
onchain/: Cargo.toml  Cargo.toml.bak  Cargo.toml.off  README.md
onchain/.tmp_demo/: simulate_payment.sh
onchain/cli/: Cargo.toml
onchain/clients/zk_client/: Cargo.toml
onchain/clients/zk_client/src/: main.rs
onchain/evm/script/: DeployLocal.s.sol  DeploySwarm.s.sol
onchain/evm/src/: Groth16Verifier.sol  IXB77Protocol.sol  ProtocolRegistry.sol  Settlement.sol  SovereignCaveatEnforcer.sol  SovereignPolicy.sol  SovereignSessionValidator.sol
onchain/evm/test/: Groth16Verifier.t.sol  SovereignCaveatEnforcer.t.sol  SovereignPolicy.t.sol  SovereignSessionValidator.t.sol
onchain/evm/test/mocks/: MockStylusConstitution.sol
onchain/programs/: README.md
onchain/programs/xb77_anchor_zig/: build.zig
onchain/programs/xb77_anchor_zig/src/: entrypoint.s  main.zig
onchain/programs/xb77_compression/: Cargo.toml
onchain/programs/xb77_compression/src/: lib.rs  poseidon.rs
onchain/programs/xb77_compression/tests/: wincode_layout.rs
onchain/programs/xb77_core/: Cargo.toml
onchain/programs/xb77_core/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
onchain/programs/xb77_core/tests/: core_flow.rs  payment_test.rs  tag_test.rs
onchain/programs/xb77_gateway/: Cargo.toml  README.md  RESEARCH_REPORT_B.md
onchain/programs/xb77_gateway/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
onchain/programs/xb77_gateway/tests/: gateway.rs  integration_cpi.rs  worktree_b.rs
onchain/programs/xb77_receipts/: Cargo.toml
onchain/programs/xb77_receipts/src/: lib.rs
onchain/programs/xb77_registry/: Cargo.toml  README.md
onchain/programs/xb77_registry/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
onchain/programs/xb77_registry/tests/: registry.rs
onchain/programs/xb77_test_utils/: Cargo.toml
onchain/programs/xb77_test_utils/src/: lib.rs
onchain/programs/xb77_zk_verifier/: Cargo.toml
onchain/programs/xb77_zk_verifier/src/: lib.rs  vk.rs
onchain/stylus/: Cargo.toml  aave_guard.zig  abi.zig  alloc.zig  anchor.zig  deploy.sh  deployed_addresses.env  deployed_addresses_robinhood.env  gmx_guard.zig  groth16_verifier.zig  host.zig  main.zig  minimal.zig  mock_hooks.zig  sdk.zig  settlement.zig  settlement_engine.zig  test_abi.zig  test_groth16_verifier.zig  test_stylus.zig  test_ultraplonk.zig  ultraplonk_state_anchor.zig  uniswap_hook.zig  verifier_registry.zig  zk_verifier.zig
onchain/stylus/bn254/: fp.zig  fp12.zig  fp2.zig  fp6.zig  fr.zig  g1.zig  g2.zig  groth16.zig  groth16_test.zig  pairing.zig
onchain/stylus/rust-shim/: Cargo.toml
onchain/stylus/rust-shim/src/: lib.rs
onchain/stylus_constitution/: main.zig
onchain/sui/sources/: policy.move  receipt.move
pages/: index.md
plans/: worktree-b-vault-light.md
profiles/: Alpha.toml  Beta.toml  Gamma.toml  alpha.toml  client.toml  demo_final.toml  hack-demo.toml  local-arc.toml  localdemo.toml  localtest.toml  provider.toml  (+1 more)
sdk/rs/: Cargo.toml  build.rs
sdk/rs/examples/: cross_fixture.rs
sdk/rs/src/: lib.rs
sdk/rs/tests/: wrapper.rs
(+961 files in other folders)
