[package]
name = "xb77_gateway_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
solana-client = "2.1.0"
solana-sdk = "2.1.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }

xb77_gateway = { path = "../onchain/programs/xb77_gateway" }

[workspace]

