[package]
name = "xb77_gateway"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.1.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
mollusk-svm = { git = "https://github.com/anza-xyz/mollusk", package = "mollusk-svm" }
solana-account = "3.2.0"
solana-instruction = "3.0"
solana-program-error = "3.0"
solana-pubkey = "4.0"
