[package]
name = "xb77_compression"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.3.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
borsh = "1.5.5"
thiserror = "1.0"
light-poseidon = "0.4.0"

[dev-dependencies]
mollusk-svm = { git = "https://github.com/anza-xyz/mollusk", package = "mollusk-svm" }
solana-pubkey = "4.0.0"
