[package]
name = "xb77.iopression"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~3.0"
solana-poseidon = "3.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
borsh = "1.5.5"
thiserror = "1.0"
ark-bn254 = "=0.5.0"
ark-ff = "=0.5.0"

[dev-dependencies]
mollusk-svm = "*"
solana-pubkey = "*"
