[package]
name = "xb77_core"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.3.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
spl-token = { version = "4.0.0", default-features = false, features = ["no-entrypoint"] }
borsh = "0.10.3"

[dev-dependencies]
mollusk-svm = { git = "https://github.com/anza-xyz/mollusk", package = "mollusk-svm" }
solana-account = "3.3.0"
solana-instruction = "3.1.0"
solana-program-error = "3.0"
solana-pubkey = "4.0"
