[package]
name = "xb77_core"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.3.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
spl-token = { version = "4.0.0", default-features = false, features = ["no-entrypoint"] }
borsh = "=1.5.5"
thiserror = "=1.0.69"
light-poseidon = "0.4.0"

# Hard-pinning for Rust 1.75.0 (Solana SBF SDK) - Commented out to resolve conflicts in 2026
# block-buffer = "=0.10.4"
# crypto-common = "=0.1.6"
# digest = "=0.10.7"
# constant_time_eq = "=0.3.1"
# indexmap = "=2.5.0"
# toml_datetime = "=0.6.5"
# toml_edit = "=0.21.1"

[dev-dependencies]
mollusk-svm = { git = "https://github.com/anza-xyz/mollusk", package = "mollusk-svm" }
solana-account = "=3.3.0"
solana-instruction = "=3.1.0"
solana-program-error = "=3.0.0"
solana-pubkey = "=4.0.0"
