[package]
name = "xb77_gateway"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~3.0"
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
spl-token = { version = "4.0.0", default-features = false, features = ["no-entrypoint"] }

[dev-dependencies]
xb77_core = { path = "../xb77_core" }
mollusk-svm = "*"
solana-account = "*"
solana-instruction = "*"
solana-program-error = "*"
solana-pubkey = "*"
