[package]
name = "xb77_receipts"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.2"
borsh = "0.10.4"
light-sdk = "0.19.0"
light-hasher = { version = "5.0.0", features = ["std"] }
light-sdk-types = "0.19.0"
light-macros = "2.2.0"
shank = "0.4.2"


[dev-dependencies]
light-program-test = "0.19.0"
light-client = "0.19.0"
tokio = "1.36.0"
solana-sdk = "2.2"
blake3 = "=1.8.2"
