[package]
name = "xb77_registry"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~3.0"
solana-system-interface = { version = "*", features = ["bincode"] }
wincode = { version = "0.2.5", default-features = false, features = ["alloc", "derive", "solana-short-vec"] }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

[dev-dependencies]
mollusk-svm = "*"
solana-account = "*"
solana-instruction = "*"
solana-program-error = "*"
solana-pubkey = "*"
