[package]
name = "xb77_zk_verifier"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
verifier-lib = { git = "https://github.com/reilabs/sunspot.git", rev = "7edafaf6a3b47cdcb8d008e87d477abe82e5ca1d" }
constant_time_eq = "=0.3.1"
blake3 = "=1.8.2"
